--- a/static/allinone.css
+++ b/static/allinone.css
@@ -64,10 +64,12 @@ h4 {
 
 .navul {
     list-style: none;
-    margin: 10px;
+    /* margin: 10px; */
+    /* margin-bottom: 30px; */
+    /* inline display cant use margin. */
     display: inline;
     text-align: center;
-    margin-bottom: 30px;
+
 }
 
 section {
@@ -245,4 +247,10 @@ margin-left: auto;
 margin-right: auto;
 font-size: 12px;
 list-style: none;
+}
+/* for mobile */
+@media screen and (max-width: 430px) {
+  selection {
+    margin-top 100:
+  }
 }
